# DMD_nrf

./: .gitignore  CMakeLists.txt  README.md  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
fast_receiver/fast_receiver/: fast_receiver.ino
fast_receiver/libraries/DueAdcFast/examples/Ardu2GridTied/: Ardu2GridTied.pde
fast_receiver/libraries/DueAdcFast/examples/Sample1/: Sample1.pde
fast_receiver/libraries/DueAdcFast/examples/Sample2/: Sample2.pde
fast_receiver/libraries/DueAdcFast/examples/Sample3/: Sample3.pde
fast_receiver/libraries/DueAdcFast/examples/Sample4/: Sample4.pde
fast_receiver/libraries/DueAdcFast/src/: DueAdcFast.cpp  DueAdcFast.h
fast_receiver/libraries/libcorrect/: library.properties
fast_receiver/libraries/libcorrect/src/: correct.h  field.h  rs.c
src/: buffer.c  buffer.h  common.c  common.h  main.c  manchester.c  manchester.h
src/peripheral-controllers/input-detection/: adc_controller.c  adc_controller.h  lpcomp_controller.c  lpcomp_controller.h
src/peripheral-controllers/interfacing/: gpio_controller.c  gpio_controller.h  uarte_controller.c  uarte_controller.h
src/peripheral-controllers/signals/: gpiote_controller.c  gpiote_controller.h  spim_controller.c  spim_controller.h  spis_controller.c  spis_controller.h
src/peripheral-controllers/timing/: dppi_controller.c  dppi_controller.h  timer_controller.c  timer_controller.h
